0x01-react_intro/task_1/dashboard/src/bo

> dashboard@0.1.0 start
> react-scripts start

Starting the development server...

Failed to compile.

[eslint] 
src/Notifications.js
Syntax error: Missing semicolon. (3:15) (3:15)
ERROR in ./src/Notifications.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /root/alx-react/0x01-react_intro/task_1/dashboard/src/Notifications.js: Missing semicolon. (3:15)

  1 | import React from 'react';
  2 | import './Notifications.css';
> 3 | notifications(){
    |                ^
  4 | return(
  5 | 	<div className="Notifications">
  6 |           <p>Here is the list of notifications</p>
    at constructor (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:353:19)
    at FlowParserMixin.raise (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:3277:19)
    at FlowParserMixin.semicolon (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:3598:10)
    at FlowParserMixin.parseExpressionStatement (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12765:10)
    at FlowParserMixin.parseExpressionStatement (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:5077:18)
    at FlowParserMixin.parseStatementContent (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12376:19)
    at FlowParserMixin.parseStatementLike (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12239:17)
    at FlowParserMixin.parseStatementLike (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:5055:24)
    at FlowParserMixin.parseModuleItem (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12216:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12796:36)
    at FlowParserMixin.parseBlockBody (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12789:10)
    at FlowParserMixin.parseProgram (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12116:10)
    at FlowParserMixin.parseTopLevel (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12106:25)
    at FlowParserMixin.parseTopLevel (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:5822:28)
    at FlowParserMixin.parse (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:13905:10)
    at parse (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:13947:38)
    at parser (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/core/lib/transformation/index.js:21:50)
    at run.next (<anonymous>)
    at transform (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/gensync/index.js:261:32)
    at /root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/gensync/index.js:223:11)
    at /root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/gensync/index.js:189:28
    at /root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/core/lib/gensync-utils/async.js:67:7
    at /root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/gensync/index.js:113:33
    at step (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/gensync/index.js:287:14)
    at /root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/gensync/index.js:223:11)

ERROR in [eslint] 
src/Notifications.js
  Line 3:15:  Parsing error: Missing semicolon. (3:15)

webpack compiled with 2 errors
